<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/image_back_button"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/go_back"
            android:rotationX="360"
            android:src="@drawable/cheveron"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/address_Text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:fontFamily="Tanseek Modern Arabic Medium"
            android:gravity="bottom"
            android:paddingStart="60dp"
            android:paddingTop="7.5dp"
            android:paddingEnd="15dp"
            android:rotationX="360"
            android:text="@string/address"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Tanseek Modern Arabic Medium"
            android:text="@string/name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/secon_tier"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/musa_mohammed">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tanseek Modern Arabic Medium"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/phoneNumber"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tanseek Modern Arabic Medium"

                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <!--    here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Tanseek Modern Arabic Medium"
                android:text="@string/city"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/city"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lagos">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Tanseek Modern Arabic Medium"

                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Tanseek Modern Arabic Medium"
                android:text="@string/street"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/street"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_123">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="Tanseek Modern Arabic Medium"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Tanseek Modern Arabic Medium"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/address"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_add">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tanseek Modern Arabic Medium" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:fontFamily="Tanseek Modern Arabic Medium"
            android:text="@string/save_as_primary_address"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.materialswitch.MaterialSwitch
            style="@style/TextAppearance.AppCompat.Widget.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textColorHint="@color/white"
            app:thumbTint="@color/white"
            app:trackTint="@color/green" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/orange"
            android:fontFamily=""
            android:text="@string/save_address"
            android:textSize="14sp"></com.google.android.material.button.MaterialButton>

    </LinearLayout>


</LinearLayout>